# pdf-image-extract

./: .gitattribute  .gitattributes  pyproject.toml
src/py/: alto_to_text.py  clean_images.py  cleanup.py  correct-ocr-issues.py  draw_contours.py  extract.py  extract_from_images.py  extract_text.py  extract_text_from_alto.py  gui.py  image_stats.py  path_utils.py  pdf_text_extract.py  process_pdf.py  spellcheck_text.py
src/script/: clean_command.sh  textcleaner
